tests/ui/span/E0535.rs
<<<PULL-UPSTREAM>>> file deleted upstream; move the Ferrocene annotations if any, and delete this file
#[inline(unknown)] //~ ERROR E0535
pub fn something() {}

fn main() {
    something();
}

// ferrocene-annotations: fls_ypio6boj3pwf
// Attribute inline
